# observe-mcp-server

./: .env.example  .gitignore  Dockerfile  README.md  openobserve_stream_catalog.json.example  pyproject.toml
config/: openobserve_stream_catalog.json  openobserve_stream_catalog.json.example  prometheus_aliases.json
k8s/: deployment.yaml
src/observe_mcp_server/: __init__.py  __main__.py  logging.py  models.py  server.py  settings.py
src/observe_mcp_server/backends/: __init__.py  openobserve.py  prometheus.py  skywalking.py
src/observe_mcp_server/tools/: __init__.py  openobserve.py  prometheus.py  skywalking.py
tests/: conftest.py  test_logging_module.py  test_main.py  test_models.py  test_openobserve_backends.py  test_openobserve_tools.py  test_prometheus_backend.py  test_prometheus_backends.py  test_prometheus_tools.py  test_prometheus_tools_extra.py  test_server_registers.py  test_settings.py  test_skywalking_backends.py  test_skywalking_tools.py
