[project]
name = "observe-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "rongjie.zhang", email = "rongjie.zhang@shell.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
observe-mcp-server = "observe_mcp_server:main"

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"
