[project]
name = "observe-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "rongjie.zhang", email = "rongjie.zhang@shell.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0.2",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "structlog>=25.5.0",
]

[project.scripts]
observe-mcp-server = "observe_mcp_server:main"

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"
